Avoid using Long boxing